Fix article metadata: capitalize topics, tighten punctuation spacing

--- a/public/stylesheets/pages/blog-post.css
+++ b/public/stylesheets/pages/blog-post.css
@@ -51,8 +51,6 @@
 .article-meta .topic-tag {
     display: inline;
     color: inherit;
-    text-transform: none;
-    letter-spacing: 0;
 }
 
 .article-meta .topic-tag::before {
